rsfg/tests/scripts/error/shadow-same-scope.sfg
fn main()
	var x = 5
	assert(x == 5)
	var x = 6
	assert(x == 6)

